--- a/index.html
+++ b/index.html
@@ -39,16 +39,16 @@
     <!-- section1:hero -->
     <section class="hero-section">
       <div class="text"><h2 class="animate__animated animate__rubberBand">H'i im <span class="ayush-hero">Ayush</span> 𓆝 𓆟 𓆞 𓆝</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima cumque iusto non ut tenetur sint magni labore mollitia incidunt sequi doloremque in amet ipsum omnis praesentium, eum rem laborum hic eos itaque similique. Eveniet libero eius unde, blanditiis debitis officiis aut, hic voluptate pariatur, provident ea quo fugiat dolore. Nostrum?</p>
+      <p>This is my official portfolio website to describe all details and work experience in web development </p>
       <div class="links">
         <a href="#skills">
           <i class="fa-solid fa-code"></i>
           <span>Skills</span>
         </a>
 
-        <a href="#testimony">
+        <a href="#about">
           <i class="fa-solid fa-pen"></i>
-          <span>testimony</span>
+          <span>About </span>
         </a>
 
         <a href="#contact">
@@ -59,8 +59,8 @@
     </div>
 
       <div data-aos="flip-left"
-    data-aos-easing="ease-out-cubic"
-    data-aos-duration="2000" class="headshot">
+        data-aos-easing="ease-out-cubic"
+        data-aos-duration="2000" class="headshot">
         <img src="./assets/LOGO.png" alt="ayush ks headshot">
       </div>
     </section>
@@ -101,22 +101,23 @@
       </div>
     </section>
 
-    <!-- section3:testimony -->
-    <section id="testimony" class="testimony-section">
-      <h2>testimony</h2>
+    <!-- section3:about -->
+    <section id="about" class="about-section">
+      <h2>About me</h2>
 
       <div class="group">
         <div class="person-details">
           <img src="./assets/testimony-headshot.webp">
           <p>Ayush ks</p>
-          <p>Lorem ipsum dolor sit amet.</p>
+          <p>a curious mind with a keyboard and a mission.</p>
         </div>
 
         <div data-aos="fade-zoom-in"
-    data-aos-easing="ease-in-back"
-    data-aos-delay="300"
-    data-aos-offset="0" class="text">
-          "Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae maiores delectus dicta, dolorum blanditiis sed expedita libero, quidem, nemo iste a eum itaque labore. Odit aspernatur repellendus nostrum dolorem ab inventore, consequatur omnis quis rem vero doloribus hic accusantium autem libero sapiente vitae voluptates mollitia, natus corrupti! Doloribus, delectus asperiores!"
+          data-aos-easing="ease-in-back"
+          data-aos-delay="300"
+          data-aos-offset="0" class="text">
+          "I blend creativity with code to craft digital experiences that don’t just look good — they feel right. I’ve already laid a solid foundation in HTML and CSS, started exploring JavaScript, and I’m diving deeper into frontend magic as I move toward full stack mastery.<br>This isn’t just a portfolio.
+          It’s a preview of what I’m building — and who I’m becoming.Let’s build the future, one line of code at a time."
         </div>
       </div>
     </section>
@@ -127,7 +128,9 @@
 
       <div class="group">
         <div class="text">
-          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ad amet inventore cupiditate sint facere unde commodi sequi omnis. Neque, expedita. Fuga suscipit voluptatum magni velit corrupti, sequi natus ducimus vel veritatis sed iste ullam asperiores officia eligendi voluptatem deleniti in! Adipisci iste fugiat repellat harum laborum animi dolore recusandae non.
+          Have a project in mind, a question, or just want to say hi?<br>
+          I’m always open to opportunities, collaborations, or a quick tech chat.<br>
+          Feel free to drop a message — I’ll get back to you as soon as I can!.
         </div>
 
         <form>
@@ -144,6 +147,12 @@
         </form>
       </div>
     </section>
+    
+    <!-- footer -->
+      <footer class="site-footer">
+        <p>© 2025 Ayush ks. All rights reserved.</p>
+        <p>Designed & built by <span class="footer-ayush">Ayush KS</span><i class="fa-solid fa-heart"></i></p>
+      </footer>
   </main>
 </body>
 <!-- AOS cdn Script -->
