--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
     <div class="right"><a href="https://github.com/Ayushks3012" target="_blank"><i class="fa-brands fa-github"></i><span>github</span></a>
     
-    <a href="www.linkedin.com/in/ayushks2" target="_blank"><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
+    <a href="www.linkedin.com/in/ayush-ks-dev" target="_blank"><i class="fa-brands fa-linkedin"></i><span>LinkedIn</span></a>
 
     <a href="mailto:ks.ayushks@gmail.com"><i class="fa-solid fa-envelope"></i><span>Mail</span></a>
     </div>
